spacing issue

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -716,6 +716,14 @@ background: linear-gradient(to left, #003973 , #E5E5BE); /* W3C, IE 10+/ Edge, F
     }
 }
 
+@media (max-width: 425px) {
+    .fp-ht {
+    min-height: 685px;
+    }
+
+
+}
+
 .btn:focus {
   outline: none;
 }
